Tabs: fix collapsed tab height [publish]

--- a/src/tabs/tabs.css
+++ b/src/tabs/tabs.css
@@ -191,6 +191,8 @@
   border-bottom: none;
   box-shadow: none;
 
+  line-height: calc(var(--ring-unit) * 3);
+
   &:hover {
     box-shadow: none;
   }
